--- a/community/index.html
+++ b/community/index.html
@@ -11,13 +11,13 @@
     <meta name="description" content="My Site Name" />
     <meta name="author" content="My Site Name" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>News | My Site Name</title>
+    <title>Community | My Site Name</title>
     <link rel="stylesheet" href="../workspace/assets/css/screen.css" />
 <!--[if IE]> <link href="../workspace/assets/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" /> <![endif]-->
     <script src="../workspace/assets/js/modernizr.js"></script>
   </head>
-  <body class="section-news">
-    <div class="page" id="news-page">
+  <body class="section-community">
+    <div class="page" id="community-page">
       <nav role="navigation" class="global-nav"></nav>
       <header class="main-header">
         <h1 class="branding">
@@ -25,29 +25,26 @@
         </h1>
         <nav role="navigation" class="main-nav">
           <ul class="menu">
-            <li id="nav-services">
-              <a href="../services/">Services</a>
-            </li>
-            <li id="nav-news" class="current">
-              <a href="../news/">News</a>
-            </li>
-            <li id="nav-events">
-              <a href="../events/">Events</a>
-            </li>
-            <li id="nav-about">
-              <a href="../about/">About</a>
-            </li>
-            <li id="nav-contact">
-              <a href="../contact/">Contact</a>
+            <li id="nav-community" class="current">
+              <a href="../community/">Community</a>
             </li>
           </ul>
         </nav>
       </header>
       <div id="main">
-        <h1>News</h1>
+        <h1>Community</h1>
       </div>
       <nav role="navigation" class="sub-nav"></nav>
-      <footer></footer>
+      <footer id="footer">
+        <div class="field">
+          <p class="footer-community"><strong>© 2010–2012 The Symphony Community</strong><a href="http://getsymphony.com">International Site</a> · <a href="http://twitter.com/symphonycms">Twitter</a></p>
+          <p class="footer-links"><strong>Plan, Play and Practice</strong><a href="https://github.com/symphonycms/symphony-2/blob/master/README.markdown">Requirements</a> · <a href="https://github.com/symphonycms/symphony-2/blob/master/LICENCE">MIT Licence</a> · <a href="http://github.com/symphonycms">Github</a></p>
+          <p class="footer-factory">
+            <em>Conducting sites since 2004</em>
+            <a href="http://getsymphony.com">Symphony Community</a>
+          </p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
