--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <header class="network-toolbar collapsed">
         <div class="field">
           <h1 class="network-logo column one">
-            <a href="./workspace/assets/themes/factory/docs/about.xml">Symphony Network</a>
+            <a href="./">Symphony Network</a>
           </h1>
           <nav class="network-nav column">
-            <a href="./workspace/assets/themes/factory/docs/examples/community.xml">Community</a>
-            <a href="./workspace/assets/themes/factory/docs/examples/documentation.xml">Documentation</a>
-            <a href="./workspace/assets/themes/factory/docs/examples/extensions.xml">Extensions</a>
-            <a href="./workspace/assets/themes/factory/docs/examples/ninjas.xml">Ninjas</a>
-            <a href="./workspace/assets/themes/factory/docs/examples/xpathr.xml">xPathr</a>
+            <a href="./community/">Community</a>
+            <a href="#">Documentation</a>
+            <a href="#">Extensions</a>
+            <a href="#">Ninjas</a>
+            <a href="#">xpathr</a>
           </nav>
           <div id="user" class="network-user">
             <a href="http://getsymphony.com/get-involved/member/Allen/">
@@ -119,7 +119,18 @@
       </div>
     </aside>
     <div id="site">
-      <header class="site-header centered"></header>
+      <header class="site-header centered">
+        <h1>
+          <span>Symphony</span>
+        </h1>
+        <nav role="navigation" class="main-nav">
+          <ul class="menu">
+            <li id="nav-community">
+              <a href="./community/">Community</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
       <div id="main">
         <h1>Home</h1>
       </div>
