Modify main navigation to align with design for Community site

--- a/community/index.html
+++ b/community/index.html
@@ -123,12 +123,14 @@
         <h1>
           <span>Symphony</span>
         </h1>
-        <nav role="navigation" class="main-nav">
-          <ul class="menu">
-            <li id="nav-community" class="current">
-              <a href="../community/">Community</a>
-            </li>
-          </ul>
+        <nav>
+          <a href="../" class="active">Stream</a>
+          <a href="../discuss/">Discussions</a>
+          <a href="../questions/">Questions</a>
+          <a href="../blog/">Blog</a>
+          <a href="../showcase/">Showcase</a>
+          <a href="../events/">Events</a>
+          <a href="../about/">About</a>
         </nav>
       </header>
       <div class="field">
