Replace Community pages with Discussions

--- a/discussions/index.html
+++ b/discussions/index.html
@@ -125,7 +125,7 @@
         </h1>
         <nav>
           <a href="../" class="active">Stream</a>
-          <a href="../discuss/">Discussions</a>
+          <a href="../discussions/">Discussions</a>
           <a href="../questions/">Questions</a>
           <a href="../blog/">Blog</a>
           <a href="../showcase/">Showcase</a>
