--- a/discussions/index.html
+++ b/discussions/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Symphony" />
     <meta name="author" content="Symphony" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Community | Symphony</title>
+    <title>Discussions | Symphony</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../workspace/assets/themes/factory/css/codemirror.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../workspace/assets/themes/factory/css/factory.css" />
@@ -123,12 +123,14 @@
         <h1>
           <span>Symphony</span>
         </h1>
-        <nav role="navigation" class="main-nav">
-          <ul class="menu">
-            <li id="nav-community" class="current">
-              <a href="../community/">Community</a>
-            </li>
-          </ul>
+        <nav>
+          <a href="../">Stream</a>
+          <a href="../discussions/" class="active">Discussions</a>
+          <a href="../questions/">Questions</a>
+          <a href="../blog/">Blog</a>
+          <a href="../showcase/">Showcase</a>
+          <a href="../events/">Events</a>
+          <a href="../about/">About</a>
         </nav>
       </header>
       <div class="field">
