Render HTML and output README and build files after site structure changes

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           </h1>
           <nav class="network-nav column">
             <a href="./" class="active">Community</a>
-            <a href="./documentation/">Documentation</a>
-            <a href="./extensions/">Extensions</a>
+            <a href="./docs/">Documentation</a>
+            <a href="./ext/">Extensions</a>
             <a href="./ninjas/">Ninjas</a>
             <a href="./xpathr/">xpathr</a>
           </nav>
@@ -124,7 +124,7 @@
           <span>Symphony</span>
         </h1>
         <nav>
-          <a href="./stream/" class="active">Stream</a>
+          <a href="./" class="active">Stream</a>
           <a href="./discussions/">Discussions</a>
           <a href="./questions/">Questions</a>
           <a href="./blog/">Blog</a>
