--- a/ninjas/index.html
+++ b/ninjas/index.html
@@ -31,8 +31,8 @@
           </h1>
           <nav class="network-nav column">
             <a href="../">Community</a>
-            <a href="../documentation/">Documentation</a>
-            <a href="../extensions/">Extensions</a>
+            <a href="../docs/">Documentation</a>
+            <a href="../ext/">Extensions</a>
             <a href="../ninjas/" class="active">Ninjas</a>
             <a href="../xpathr/">xpathr</a>
           </nav>
@@ -124,13 +124,9 @@
           <span>Symphony</span>
         </h1>
         <nav>
-          <a href="../stream/">Stream</a>
-          <a href="../discussions/">Discussions</a>
-          <a href="../questions/">Questions</a>
-          <a href="../blog/">Blog</a>
-          <a href="../showcase/">Showcase</a>
-          <a href="../events/">Events</a>
-          <a href="../about/">About</a>
+          <a href="../ninjas/interviews/">Interviews</a>
+          <a href="../ninjas/directory/">Directory</a>
+          <a href="../ninjas/about/">Learn More</a>
         </nav>
       </header>
     </div>
