--- a/xpathr/index.html
+++ b/xpathr/index.html
@@ -31,8 +31,8 @@
           </h1>
           <nav class="network-nav column">
             <a href="../">Community</a>
-            <a href="../documentation/">Documentation</a>
-            <a href="../extensions/">Extensions</a>
+            <a href="../docs/">Documentation</a>
+            <a href="../ext/">Extensions</a>
             <a href="../ninjas/">Ninjas</a>
             <a href="../xpathr/" class="active">xpathr</a>
           </nav>
@@ -124,13 +124,10 @@
           <span>Symphony</span>
         </h1>
         <nav>
-          <a href="../stream/">Stream</a>
-          <a href="../discussions/">Discussions</a>
-          <a href="../questions/">Questions</a>
-          <a href="../blog/">Blog</a>
-          <a href="../showcase/">Showcase</a>
-          <a href="../events/">Events</a>
-          <a href="../about/">About</a>
+          <a href="../xpathr/popular/">Popular</a>
+          <a href="../xpathr/categories/">Categories</a>
+          <a href="../xpathr/recent/">Recent</a>
+          <a href="../xpathr/contributors/">Contributors</a>
         </nav>
       </header>
     </div>
