Render HTML with site names for sites other than the primary site

--- a/ext/index.html
+++ b/ext/index.html
@@ -120,9 +120,7 @@
     </aside>
     <div id="site">
       <header class="site-header centered">
-        <h1>
-          <span>Symphony</span>
-        </h1>
+        <h1><span>Symphony</span> Extensions</h1>
         <nav>
           <a href="../ext/extensions/">Browse Extensions</a>
           <a href="../ext/matrix/">Compatibility Matrix</a>
