--- a/xpathr/index.html
+++ b/xpathr/index.html
@@ -120,9 +120,7 @@
     </aside>
     <div id="site">
       <header class="site-header centered">
-        <h1>
-          <span>Symphony</span>
-        </h1>
+        <h1><span>Symphony</span> xpathr</h1>
         <nav>
           <a href="../xpathr/popular/">Popular</a>
           <a href="../xpathr/categories/">Categories</a>
