--- a/ninjas/index.html
+++ b/ninjas/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Symphony" />
     <meta name="author" content="Symphony" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Symphony Ninjas | Symphony</title>
+    <title>Ninjas | Symphony</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/css/codemirror.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/css/factory.css" />
@@ -120,9 +120,7 @@
     </aside>
     <div id="site">
       <header class="site-header centered">
-        <h1>
-          <span>Symphony</span>
-        </h1>
+        <h1><span>Symphony</span> Ninjas</h1>
         <nav>
           <a href="../ninjas/interviews/">Interviews</a>
           <a href="../ninjas/directory/">Directory</a>
