Render HTML for Extensions, Ninjas and xpathr

--- a/xpathr/index.html
+++ b/xpathr/index.html
@@ -128,6 +128,11 @@
           <a href="../xpathr/contributors/">Contributors</a>
         </nav>
       </header>
+      <div class="field">
+      <div class="column content">
+        <p class="dimmed">Please have a look at the <a href="https://github.com/symphonycms/factory/issues/35">discussions around xPathr on Github</a>.</p>
+      </div>
+    </div>
     </div>
     <footer id="footer">
       <div class="field">
