Remove old HTML files and generate the new Documentation HTML pages

--- a/guides/index.html
+++ b/guides/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Symphony" />
     <meta name="author" content="Symphony" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>About | Symphony</title>
+    <title>Guides | Symphony</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/css/codemirror.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/css/factory.css" />
@@ -30,11 +30,11 @@
             <a href="../">Symphony Network</a>
           </h1>
           <nav class="network-nav column">
-            <a href="../" class="active">Community</a>
-            <a href="../docs/">Documentation</a>
-            <a href="../ext/">Extensions</a>
-            <a href="../ninjas/">Ninjas</a>
-            <a href="../xpathr/">xpathr</a>
+            <a href="#">Community</a>
+            <a href="../" class="active">Documentation</a>
+            <a href="#">Extensions</a>
+            <a href="#">Ninjas</a>
+            <a href="#">xpathr</a>
           </nav>
           <div id="user" class="network-user">
             <a href="http://getsymphony.com/get-involved/member/Allen/">
@@ -120,17 +120,14 @@
     </aside>
     <div id="site">
       <header class="site-header centered">
-        <h1>
-          <span>Symphony</span>
-        </h1>
+        <h1><span>Symphony</span> Documentation</h1>
         <nav>
-          <a href="../">Stream</a>
-          <a href="../discussions/">Discussions</a>
-          <a href="../questions/">Questions</a>
-          <a href="../blog/">Blog</a>
-          <a href="../showcase/">Showcase</a>
-          <a href="../events/">Events</a>
-          <a href="../about/" class="active">About</a>
+          <a href="../guides/" class="active">Guides</a>
+          <a href="../tutorials/">Tutorials</a>
+          <a href="../articles/">Articles</a>
+          <a href="../concepts/">Concepts</a>
+          <a href="../faq/">FAQ</a>
+          <a href="../api/">API</a>
         </nav>
       </header>
     </div>
