--- a/faq/index.html
+++ b/faq/index.html
@@ -13,32 +13,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>FAQ | Symphony</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../../workspace/factory/css/codemirror.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../../workspace/factory/css/factory.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../../workspace/factory/docs/css/factory.docs.css" />
-    <script type="text/javascript" src="../../workspace/factory/js/jquery.js"></script>
-    <script type="text/javascript" src="../../workspace/factory/js/modernizr.js"></script>
-    <script type="text/javascript" src="../../workspace/factory/js/codemirror.js"></script>
-    <script type="text/javascript" src="../../workspace/factory/js/factory.js"></script>
-    <script type="text/javascript" src="../../workspace/factory/js/factory.grid.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/css/codemirror.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/css/factory.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/docs/css/factory.docs.css" />
+    <script type="text/javascript" src="../workspace/factory/js/jquery.js"></script>
+    <script type="text/javascript" src="../workspace/factory/js/modernizr.js"></script>
+    <script type="text/javascript" src="../workspace/factory/js/codemirror.js"></script>
+    <script type="text/javascript" src="../workspace/factory/js/factory.js"></script>
+    <script type="text/javascript" src="../workspace/factory/js/factory.grid.js"></script>
   </head>
   <body>
     <aside id="network">
       <header class="network-toolbar collapsed">
         <div class="field">
           <h1 class="network-logo column one">
-            <a href="../../">Symphony Network</a>
+            <a href="../">Symphony Network</a>
           </h1>
           <nav class="network-nav column">
-            <a href="../../">Community</a>
-            <a href="../../docs/" class="active">Documentation</a>
-            <a href="../../ext/">Extensions</a>
-            <a href="../../ninjas/">Ninjas</a>
-            <a href="../../xpathr/">xpathr</a>
+            <a href="#">Community</a>
+            <a href="../" class="active">Documentation</a>
+            <a href="#">Extensions</a>
+            <a href="#">Ninjas</a>
+            <a href="#">xpathr</a>
           </nav>
           <div id="user" class="network-user">
             <a href="http://getsymphony.com/get-involved/member/Allen/">
-              <img src="../../workspace/factory/img/user.png" width="35" height="35" alt="Allen Chang" />
+              <img src="../workspace/factory/img/user.png" width="35" height="35" alt="Allen Chang" />
             </a>
             <p><a href="http://getsymphony.com/get-involved/currently-online/" class="network-visitors">15</a> + <a class="network-username">Allen Chang</a></p>
           </div>
@@ -47,7 +47,7 @@
       <div class="field network-profile">
         <form>
           <div class="network-gravatar column one">
-            <img src="../../workspace/factory/img/user.png" width="174" height="174" alt="Allen Chang" />
+            <img src="../workspace/factory/img/user.png" width="174" height="174" alt="Allen Chang" />
             <p>Change your avatar at <a href="http://gravatar.com">Gravatar</a>.</p>
           </div>
           <fieldset class="column one large-two">
@@ -122,12 +122,12 @@
       <header class="site-header centered">
         <h1><span>Symphony</span> Documentation</h1>
         <nav>
-          <a href="../../docs/guides/">Guides</a>
-          <a href="../../docs/tutorials/">Tutorials</a>
-          <a href="../../docs/articles/">Articles</a>
-          <a href="../../docs/concepts/">Concepts</a>
-          <a href="../../docs/faq/" class="active">FAQ</a>
-          <a href="../../docs/api/">API</a>
+          <a href="../guides/">Guides</a>
+          <a href="../tutorials/">Tutorials</a>
+          <a href="../articles/">Articles</a>
+          <a href="../concepts/">Concepts</a>
+          <a href="../faq/" class="active">FAQ</a>
+          <a href="../api/">API</a>
         </nav>
       </header>
     </div>
