Test a different navigation structure: Introduction, Concepts, Workflows, Projects, API

--- a/intro/index.html
+++ b/intro/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Symphony" />
     <meta name="author" content="Symphony" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Concepts | Symphony</title>
+    <title>Introduction | Symphony</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/css/codemirror.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="../workspace/factory/css/factory.css" />
@@ -123,8 +123,8 @@
       <header class="site-header centered">
         <h1><span>Symphony</span> Documentation</h1>
         <nav>
-          <a href="../intro/">Introduction</a>
-          <a href="../concepts/" class="active">Concepts</a>
+          <a href="../intro/" class="active">Introduction</a>
+          <a href="../concepts/">Concepts</a>
           <a href="../workflows/">Workflows</a>
           <a href="../projects/">Projects</a>
           <a href="../api/">API</a>
