Modify navigation: Add Fundamentals, shorten Introduction to Intro and move Concepts just before API

--- a/projects/index.html
+++ b/projects/index.html
@@ -123,10 +123,11 @@
       <header class="site-header centered">
         <h1><span>Symphony</span> Documentation</h1>
         <nav>
-          <a href="../intro/">Introduction</a>
-          <a href="../concepts/">Concepts</a>
+          <a href="../intro/">Intro</a>
+          <a href="../fundamentals/">Fundamentals</a>
           <a href="../workflows/">Workflows</a>
           <a href="../projects/" class="active">Projects</a>
+          <a href="../concepts/">Concepts</a>
           <a href="../api/">API</a>
         </nav>
       </header>
