--- a/intro/index.html
+++ b/intro/index.html
@@ -123,10 +123,11 @@
       <header class="site-header centered">
         <h1><span>Symphony</span> Documentation</h1>
         <nav>
-          <a href="../intro/" class="active">Introduction</a>
-          <a href="../concepts/">Concepts</a>
+          <a href="../intro/" class="active">Intro</a>
+          <a href="../fundamentals/">Fundamentals</a>
           <a href="../workflows/">Workflows</a>
           <a href="../projects/">Projects</a>
+          <a href="../concepts/">Concepts</a>
           <a href="../api/">API</a>
         </nav>
       </header>
