--- a/workflows/index.html
+++ b/workflows/index.html
@@ -123,10 +123,11 @@
       <header class="site-header centered">
         <h1><span>Symphony</span> Documentation</h1>
         <nav>
-          <a href="../intro/">Introduction</a>
-          <a href="../concepts/">Concepts</a>
+          <a href="../intro/">Intro</a>
+          <a href="../fundamentals/">Fundamentals</a>
           <a href="../workflows/" class="active">Workflows</a>
           <a href="../projects/">Projects</a>
+          <a href="../concepts/">Concepts</a>
           <a href="../api/">API</a>
         </nav>
       </header>
